--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "tricolor-sp",
   "version": "1.0.0",
-  "description": "Portal de notícias do São Paulo FC com IA",
-  "main": "src/newsAPI.js",
+  "description": "API de notícias do São Paulo FC",
+  "main": "newsAPI.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "axios": "^1.5.0",
+    "cheerio": "^1.0.0",
+    "cors": "^2.8.5"
+  },
   "scripts": {
     "start": "node src/newsAPI.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0"
   }
 }
