--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "express": "^4.17.1",
     "axios": "^1.5.0",
     "cheerio": "^1.0.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "puppeteer": "^21.5.3"
   },
   "scripts": {
-  "start": "node src/newsAPI.js",
-  "postinstall": "npx puppeteer browsers install chrome"
-}
-}
+    "start": "node src/newsAPI.js",
+    "postinstall": "npx puppeteer browsers install chrome"
+  }
 }
