--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "puppeteer": "^21.5.3"
   },
   "scripts": {
-    "start": "node src/newsAPI.js",
-    "postinstall": "npx puppeteer browsers install chrome"
-  }
+  "start": "node src/newsAPI.js",
+  "postinstall": "rm -rf /opt/render/.cache/puppeteer && npx puppeteer browsers install chrome"
+}
 }
